# smu-meal-index

./: .gitignore  calculator.py  config.py  database.py  fetcher.py  meal_index.db  project.md  pyproject.toml  scheduler.py  smu_login.py  vercel.json
.github/workflows/: update.yml
web/: data.json  index.html  package-lock.json  package.json
web/public/: data.json
web/src/: App.tsx  index.css  types.ts  utils.ts
web/src/components/: CampusTabs.tsx  FlowChart.tsx  Footer.tsx  Gauge.tsx  HistoryTable.tsx  ScoreCard.tsx  TopBar.tsx  ViewToggle.tsx  WeekOverview.tsx
web/src/hooks/: useAppData.ts  useCountUp.ts
